infrastructure/monitoring/grafana-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: grafana
  name: grafana
  namespace: monitoring
  annotations:
    flux.weave.works/automated: "true"
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: grafana
      annotations:
        prometheus.io/scrape: "true"
        configHash: "5d0b9d7f0e66796aa430b3b1eacaa232c98d55d1"
    spec:
      securityContext:
        fsGroup: 65534
        runAsUser: 65534
        runAsNonRoot: true
      containers:
        - image: grafana/grafana
          imagePullPolicy: IfNotPresent
          name: grafana
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 2500Mi
            requests:
              cpu: 50m
              memory: 100Mi
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: data
            - mountPath: /etc/grafana/provisioning/datasources/prometheus-datasource.yml
              name: grafana-config
              readOnly: true
              subPath: prometheus-data-source.yml
            - mountPath: /etc/grafana/provisioning/dashboards/dashboards-provider.yml
              name: grafana-config
              readOnly: true
              subPath: dashboards-provider.yml
            - mountPath: /etc/grafana/provisioned-dashboards/315-kubernetes-cluster-monitoring-via-prometheus.json
              name: grafana-config
              readOnly: true
              subPath: 315-kubernetes-cluster-monitoring-via-prometheus.json
            - mountPath: /etc/grafana/provisioned-dashboards/3146-kubernetes-pods.json
              name: grafana-config
              readOnly: true
              subPath: 3146-kubernetes-pods.json
            - mountPath: /etc/grafana/provisioned-dashboards/6417-kubernetes-cluster-prometheus.json
              name: grafana-config
              readOnly: true
              subPath: 6417-kubernetes-cluster-prometheus.json
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: {}
          name: data
        - configMap:
            name: grafana-config
          name: grafana-config
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  selector:
    app: grafana
  type: NodePort
  ports:
    - name: http-port
      protocol: TCP
      port: 30001
      targetPort: http
